--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0"
 djangorestframework = "^3.15"
+pytest-django = "^4.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
