--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.12"
 django = "^5.0"
 djangorestframework = "^3.15"
 pytest-django = "^4.8.0"
+django-extensions = "^3.2.3"
+django-debug-toolbar = "^4.4.6"
+drf-spectacular = "^0.27.2"
 
 
 [tool.poetry.group.dev.dependencies]
