--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ crashtest==0.4.1
 cryptography==42.0.8
 distlib==0.3.8
 Django==5.0.7
+django-debug-toolbar==4.4.6
+django-extensions==3.2.3
 django-filter==24.2
 djangorestframework==3.15.1
 dulwich==0.21.7
@@ -19,6 +21,7 @@ Faker==26.0.0
 fastjsonschema==2.20.0
 filelock==3.15.4
 idna==3.7
+iniconfig==2.0.0
 installer==0.7.0
 jaraco.classes==3.4.0
 jeepney==0.8.0
@@ -32,14 +35,16 @@ pathspec==0.12.1
 pexpect==4.9.0
 pkginfo==1.11.1
 platformdirs==4.2.2
+pluggy==1.5.0
 poetry==1.8.3
 poetry-core==1.9.0
 poetry-plugin-export==1.8.0
 ptyprocess==0.7.0
 pycparser==2.22
 pyproject_hooks==1.1.0
+pytest==8.3.1
+pytest-django==4.8.0
 python-dateutil==2.9.0.post0
-pytz==2024.1
 rapidfuzz==3.9.4
 requests==2.32.3
 requests-toolbelt==1.0.0
