Add authentication token handling in tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,6 @@ markers =
     smoke: Run the smoke tests
     regression: Run the regression tests
     slow: Run the slow tests
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
