--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "django-rest-framework"
+name = "drf-ii"
 version = "0.1.0"
 description = "Working with 'Order' and 'Produc'"
 authors = ["Ezequias Silva Santos <phd.esantos@gmail.com>"]
@@ -14,8 +14,7 @@ django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
 drf-spectacular = "^0.27.2"
 
-
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 factory-boy = "^3.3.0"
 
 [build-system]
