--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pytest-django = "^4.8.0"
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
 drf-spectacular = "^0.27.2"
+psycopg = "^3.2.1"
+
 
 [tool.poetry.dev-dependencies]
 factory-boy = "^3.3.0"
