--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build:
@@ -14,6 +12,8 @@ services:
       - db
     env_file:
       - .env
+    networks:
+      - app_network
 
   db:
     image: postgres:13.0-alpine
@@ -21,6 +21,12 @@ services:
       - postgres_data:/var/lib/postgresql/data
     env_file:
       - .env
+    networks:
+      - app_network
 
 volumes:
   postgres_data:
+
+networks:
+  app_network:
+    driver: bridge
