--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,22 @@ services:
       - postgres_data:/var/lib/postgresql/data
     env_file:
       - .env
+    ports:
+      - "5432:5432"  
+    networks:
+      - app_network
+
+  test:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: poetry run python manage.py test
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+    env_file:
+      - .env
     networks:
       - app_network
 
