Update Docker Compose configuration to run tests using pytest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: poetry run python manage.py test
+    command: poetry run pytest
     volumes:
       - .:/app
     depends_on:
