Revert "Update Docker Compose configuration to run tests using pytest"
This reverts commit 7ec88d1904ad8b1ea764db29fde73053f34656e7.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: poetry run pytest
+    command: poetry run python manage.py test
     volumes:
       - .:/app
     depends_on:
