--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,12 @@ jobs:
           pip install poetry
           poetry install
 
+      - name: Wait for DB
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            sleep 1
+          done
+
       - name: Run Migrations
         run: |
           poetry run python manage.py migrate
@@ -76,6 +82,10 @@ jobs:
         run: |
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml up -d
+
+      - name: Wait for DB in Docker
+        run: |
+          docker-compose exec db bash -c "until pg_isready -h localhost -p 5432; do sleep 1; done"
 
       - name: Run Migrations
         run: |
