--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    needs: test
+    needs: test  # Ensure this job runs only after the 'test' job succeeds
 
     steps:
       - name: Checkout code
